Stop using java 21 features